# Team-226-Backend

./: .coverage  .env.sample  .flake8  .gitignore  Procfile  README.md  app.properties  db.sqlite3  isort.cfg  manage.py  pyproject.toml  pytest.ini  requirements.txt
.circleci/: config.yml
resources/: admin.py  constants.py  models.py  permissions.py  querysets.py  serializers.py  urls.py  views.py
resources/migrations/: 0001_initial.py  0002_auto_20200511_1120.py  0003_auto_20200520_0825.py  0004_remove_land_images.py  0005_auto_20200520_1204.py  0006_auto_20200520_1439.py  0007_auto_20200520_1441.py  0008_auto_20200520_1800.py  0009_auto_20200520_2138.py  0010_auto_20200521_0654.py  0011_auto_20200521_0734.py  0012_auto_20200521_0840.py  0013_auto_20200521_2306.py  0014_auto_20200521_2322.py  0015_auto_20200521_2346.py  0016_auto_20200521_2347.py  0017_auto_20200530_0901.py  0018_auto_20200530_1542.py
tests/: helpers.py  test_user.py  test_user_model.py  test_zero_hunger.py
tests/test_api/: test_auth.py  test_token.py  test_user.py
tests/test_resources/: test_category_model.py  test_comment_model.py  test_land_model.py  test_list_model.py  test_post_model.py  test_resource_api.py
users/: admin.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20200517_0640.py  0003_auto_20200518_0705.py  0004_remove_user_pref_categories.py  0005_auto_20200530_0901.py
zero_hunger/: .env  asgi.py  settings.py  urls.py  wsgi.py
zero_hunger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
