[tool.poetry]
name = "zero_hunger"
version = "0.1.0"
description = "A zero hunger solution by solving farmers problems and agricultural challenges"
authors = [
    "Wadinga Leonard N.",
    "Sone Gillis",
    "Gaston Che",
    "Crespy",
    "Valery Yola",
    "HOIBI HOIBI",
    "Sonia",
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0"
djangorestframework = "^3.11.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.4"
pytest-django = "^3.9.0"
flake8 = "^3.7.9"
flake8-django = "^1.0.0"
black = "^19.10b0"

[tool.poetry.scripts]
app = 'manage:wsgi'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
